api-gateway/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: europe-central2-docker.pkg.dev/lolmatch-415913/backend-java/api-gateway:lolmatch
          imagePullPolicy: Always
          resources:
            limits:
              memory: 512Mi
              cpu: 250m
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  type: NodePort
  selector:
    app: api-gateway
  ports:
    - name: http
      port: 30200
      nodePort: 30200
      targetPort: 8080
