api-gateway/gateway_new_cert.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "api-gateway"
    networking.gke.io/managed-certificates: "gateway-certificate"
spec:
  ingressClassName: gce
  rules:
    - host: api.lolmatch.click
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
  tls:
    - hosts:
        - api.lolmatch.click
      secretName: api-gateway-tls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: europe-central2-docker.pkg.dev/lolmatch-415913/backend-java/api-gateway:lolmatch
          imagePullPolicy: Always
          resources:
            limits:
              memory: 512Mi
              cpu: 250m
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  selector:
    app: api-gateway
  ports:
    - name: http
      port: 8080
      targetPort: 8080
