api-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "api-gateway"
    networking.gke.io/managed-certificates: "gateway-certificate"
spec:
  ingressClassName: gce
  rules:
    - host: api.lolmatch.click
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
